@@ -1,3 +1,8 @@
+2014-01-06  Adam Butcher  <adam@jessamine.co.uk>
+
+	PR c++/59635
+	* g++.dg/cpp1y/pr59635.C: New testcase.
+
 2014-01-06  Martin Jambor  <mjambor@suse.cz>
 
 	PR ipa/59008
